Kubernetes-config/interfaz-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: interfaz
  name: interfaz-deploy
  namespace: carpooling-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: interfaz
  template:
    metadata:
      labels:
        app: interfaz
    spec:
      containers:
      - env:
        - name: VITE_USUARIOS_URL
          valueFrom:
            configMapKeyRef:
              key: usuarios_url
              name: carpooling-configmap
        image: sergityn/carpooling-proyect:5.0
        name: interfaz-container
        ports:
        - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: interfaz-service
  namespace: carpooling-namespace
spec:
  ports:
  - protocol: TCP 
    port: 5173
    targetPort: 5173
  selector:
    app: interfaz
