Kubernetes-config/usuarios-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: usuarios-deploy
    namespace: carpooling-namespace
    labels:
        app: carpooling-usuarios
spec:
    replicas: 1
    selector:
        matchLabels:
            app: carpooling-usuarios
    template:
        metadata:
            labels:
                app: carpooling-usuarios
        spec:
            containers:
                - name: usuarios-container
                  image: sergityn/carpooling-usuarios:1.0
                  ports:
                    - containerPort: 8083
---
apiVersion: v1 
kind: Service
metadata:
  name: usuarios-service
  namespace: carpooling-namespace

spec:
  selector:
    app: carpooling-usuarios
  ports:
  - protocol: TCP 
    port: 8083
    targetPort: 8083
