Kubernetes-config/carpooling-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: carpooling-ingress
  namespace: carpooling-namespace
spec:
  rules:
  - host: "interfaz.carpooling.es"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend: 
          service:
            name: interfaz-service
            port: 
              number: 5173
